--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Webpack Starter Kit</title>
   </head>
-  <body></body>
+  <body>
+    <input class="input-country" placeholder="Введите страну" type="text" />
+    <div class="result"></div>
+  </body>
 </html>
